{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 39,
  "lineage": "352de2aa-b9ef-e318-34ac-2192ff90e0ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ats-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:internet-gateway/igw-0d75c2bb59d0655e8",
            "id": "igw-0d75c2bb59d0655e8",
            "owner_id": "668144156539",
            "tags": {
              "Name": "ats-internet-gateway"
            },
            "tags_all": {
              "Name": "ats-internet-gateway"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:route-table/rtb-085cffacc9b5f74d0",
            "id": "rtb-085cffacc9b5f74d0",
            "owner_id": "668144156539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:route-table/rtb-028f6d554e44c57b8",
            "id": "rtb-028f6d554e44c57b8",
            "owner_id": "668144156539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d75c2bb59d0655e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ats-internet-gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071274fc44b288361",
            "route_table_id": "rtb-085cffacc9b5f74d0",
            "subnet_id": "subnet-02efb9ae526416ec0"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.ats-private-subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c8cfdbe7d142a3d",
            "route_table_id": "rtb-085cffacc9b5f74d0",
            "subnet_id": "subnet-0f734e8126a8e8d35"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.ats-private-subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079ea0ee11f17478f",
            "route_table_id": "rtb-085cffacc9b5f74d0",
            "subnet_id": "subnet-018ac018178982be4"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.ats-private-subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06090e357c94fc20a",
            "route_table_id": "rtb-028f6d554e44c57b8",
            "subnet_id": "subnet-0b4dc59f2eff5fbde"
          },
          "dependencies": [
            "aws_internet_gateway.ats-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.ats-public-subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f246c6749039810e",
            "route_table_id": "rtb-028f6d554e44c57b8",
            "subnet_id": "subnet-0c636dcc21a7e9ec7"
          },
          "dependencies": [
            "aws_internet_gateway.ats-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.ats-public-subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034302314e5681820",
            "route_table_id": "rtb-028f6d554e44c57b8",
            "subnet_id": "subnet-02d9067dfd30c4f91"
          },
          "dependencies": [
            "aws_internet_gateway.ats-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.ats-public-subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ats-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:subnet/subnet-02efb9ae526416ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02efb9ae526416ec0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668144156539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ats-private-subnet-0"
            },
            "tags_all": {
              "Name": "ats-private-subnet-0"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:subnet/subnet-0f734e8126a8e8d35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f734e8126a8e8d35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668144156539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ats-private-subnet-1"
            },
            "tags_all": {
              "Name": "ats-private-subnet-1"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:subnet/subnet-018ac018178982be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ac018178982be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "668144156539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ats-private-subnet-2"
            },
            "tags_all": {
              "Name": "ats-private-subnet-2"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ats-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:subnet/subnet-0b4dc59f2eff5fbde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4dc59f2eff5fbde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668144156539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ats-public-subnet-0"
            },
            "tags_all": {
              "Name": "ats-public-subnet-0"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:subnet/subnet-0c636dcc21a7e9ec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c636dcc21a7e9ec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668144156539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ats-public-subnet-1"
            },
            "tags_all": {
              "Name": "ats-public-subnet-1"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:subnet/subnet-02d9067dfd30c4f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d9067dfd30c4f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668144156539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ats-public-subnet-2"
            },
            "tags_all": {
              "Name": "ats-public-subnet-2"
            },
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:vpc/vpc-0ba2582a614948335",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2dbb66af96c40f4",
            "default_route_table_id": "rtb-0dbb7350d3ed31f42",
            "default_security_group_id": "sg-00c97c41e642370d6",
            "dhcp_options_id": "dopt-0d6f2da6d633bf803",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba2582a614948335",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbb7350d3ed31f42",
            "owner_id": "668144156539",
            "tags": {
              "Name": "Applicant Tracking System qa VPC"
            },
            "tags_all": {
              "Name": "Applicant Tracking System qa VPC"
            }
          }
        }
      ]
    }
  ]
}